# benefits-intake-agent

./: .gitignore  DESIGN_SYSTEM.md  INFORMATION_ARCHITECTURE.md  PORTFOLIO.md  README.md  SETUP.md  SPEC.md  WEBSITE_BLURB.md  pyproject.toml
app/: app.py
clients/: compose_transcript.md  mcp_compose_demo.py
data/: generate_cases.py
data/cases/: labels.json
eval/: inject_failures.py  report.md  run_eval.py  vision_report.md
src/: config.py  graph.py  schema.py  state.py
src/nodes/: extract.py  ingest.py  route.py  screen.py  validate.py  verify_docs.py
src/tools/: __init__.py  extraction.py  rules_core.py
tests/: test_pipeline.py
web/: server.py
web/static/: app.js  civil.html  index.html  styles.css
