[project]
name = "benefits-intake-agent"
version = "0.1.0"
description = "A human-in-the-loop benefits intake agent that screens via a deterministic rules core and never auto-denies."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "langgraph>=0.2",
    "anthropic>=0.40",
    "pydantic>=2.7",
    "reportlab>=4.0",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
app = ["streamlit>=1.40"]
dev = ["pytest>=8.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
